metadataFolder/objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_End_Date__c</fullName>
        <description>Date funding will end</description>
        <label>Funding End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Start__c</fullName>
        <description>Start date of funding</description>
        <label>Funding Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grants_Deals_Agreements__c</fullName>
        <description>Funding rewarded by the DoE</description>
        <inlineHelpText>Funding rewarded by the DoE</inlineHelpText>
        <label>Grants/Deals/Agreements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FOA_Grants</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do they meet the requirements to keep their funding?</inlineHelpText>
        <label>In Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>Sets the NAICS Code based off of the Company Field</description>
        <formula>CASE(  Industry  , 

&quot;Administrative Management and General Management Consulting Services&quot;, &quot;541611&quot;, 

&quot;Other Scientific and Technical Consulting Services&quot;, &quot;541689&quot;, 

&quot;Engineering Services&quot;, &quot;541330&quot;, 

&quot;Facilities Support Services&quot;, &quot;561210&quot;, 

&quot;Public Relations Agencies&quot;, &quot;541820&quot;, 

&quot;Computer Systems Design Services&quot;, &quot;541512&quot;, 

&quot;Other Computer Related Services&quot;, &quot;541519&quot;, 

&quot;Internet Publishing and Broadcasting and Web Search Portals&quot;, &quot;519130&quot;, 

&quot;Other Management Consulting Services&quot;, &quot;541618&quot;, 

&quot;PHOTOGRAPHIC AND PHOTOCOPYING EQUIPMENT MANUFACTURING&quot;, &quot;333316&quot;,

&quot;&quot;)</formula>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_Services_Offered__c</fullName>
        <description>The products and services offered by the account</description>
        <inlineHelpText>What products and services does the account offer?</inlineHelpText>
        <label>Products/Services Offered</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rewarded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client has an active grant</description>
        <inlineHelpText>Client has an active grant</inlineHelpText>
        <label>Rewarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_work__c</fullName>
        <description>The type of work done by the account</description>
        <inlineHelpText>The type of work done by the account</inlineHelpText>
        <label>Type of work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
</CustomObject>